--- a/Shared/Shared.Web/Shared.Web.csproj
+++ b/Shared/Shared.Web/Shared.Web.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Shared.Common\Shared.Common.csproj" />
       <ProjectReference Include="..\Shared.Types\Shared.Types.csproj" />
     </ItemGroup>
 
