--- a/Shared/Shared.Mongo/Shared.Mongo.csproj
+++ b/Shared/Shared.Mongo/Shared.Mongo.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+      <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Shared.Common\Shared.Common.csproj" />
+    </ItemGroup>
+
 </Project>
