--- a/Services/Event/Event.Api/appsettings.json
+++ b/Services/Event/Event.Api/appsettings.json
@@ -1,8 +1,24 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "app": {
+    "name": "Event.Api",
+    "version": "1.0.0"
+  },
+  "logger": {
+    "applicationName": "event-service",
+    "excludePaths": [ "/ping", "/metrics" ],
+    "level": "information",
+    "console": {
+      "enabled": true
+    },
+    "file": {
+      "enabled": true,
+      "path": "logs/logs.txt",
+      "interval": "day"
+    },
+    "seq": {
+      "enabled": false,
+      "url": "http://localhost:5341",
+      "token": "secret"
     }
   },
   "AllowedHosts": "*"
