--- a/Shared/Shared.Web/Shared.Web.csproj
+++ b/Shared/Shared.Web/Shared.Web.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
       <PackageReference Include="Figgle" Version="0.4.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
@@ -19,6 +20,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Shared.Common\Shared.Common.csproj" />
+      <ProjectReference Include="..\Shared.Cqrs\Shared.Cqrs.csproj" />
       <ProjectReference Include="..\Shared.Types\Shared.Types.csproj" />
     </ItemGroup>
 
