Update shared logic and web

--- a/Services/Event/Event.Api/appsettings.json
+++ b/Services/Event/Event.Api/appsettings.json
@@ -21,5 +21,10 @@
       "token": "secret"
     }
   },
+  "mongo": {
+    "connectionString": "mongodb://localhost:27017",
+    "database": "event-service",
+    "seed": false
+  },
   "AllowedHosts": "*"
 }
