--- a/Services/Event/Event.Api/Event.Api.csproj
+++ b/Services/Event/Event.Api/Event.Api.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
+      <ProjectReference Include="..\Event\Event.csproj" />
     </ItemGroup>
 
 </Project>
