--- a/Services/Event/Event/Event.csproj
+++ b/Services/Event/Event/Event.csproj
@@ -10,6 +10,7 @@
       <ProjectReference Include="..\..\..\Shared\Shared.Common\Shared.Common.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Domain\Shared.Domain.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.IdGenerator\Shared.IdGenerator.csproj" />
+      <ProjectReference Include="..\..\..\Shared\Shared.Mongo\Shared.Mongo.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Types\Shared.Types.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
     </ItemGroup>
