--- a/Services/Event/Event.Api/Event.Api.csproj
+++ b/Services/Event/Event.Api/Event.Api.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
+      <ProjectReference Include="..\..\..\Shared\Shared.Swagger\Shared.Swagger.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
       <ProjectReference Include="..\Event\Event.csproj" />
     </ItemGroup>
