Added command plus mongo repository

--- a/Services/Event/Event/Event.csproj
+++ b/Services/Event/Event/Event.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="NodaTime" Version="3.0.10" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.0" />
     </ItemGroup>
 
