--- a/Shared/Shared.Common/Shared.Common.csproj
+++ b/Shared/Shared.Common/Shared.Common.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+      <PackageReference Include="NodaTime" Version="3.0.10" />
     </ItemGroup>
 
     <ItemGroup>
