--- a/Services/Event/Event.Infrastructure/Event.Infrastructure.csproj
+++ b/Services/Event/Event.Infrastructure/Event.Infrastructure.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Shared\Shared.Cqrs\Shared.Cqrs.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Mongo\Shared.Mongo.csproj" />
       <ProjectReference Include="..\Event.Core\Event.Core.csproj" />
     </ItemGroup>
