--- a/src/Services/Event/Event.Application/Event.Application.csproj
+++ b/src/Services/Event/Event.Application/Event.Application.csproj
@@ -18,4 +18,8 @@
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Match\Features\UpdateMatch" />
+    </ItemGroup>
+
 </Project>
