--- a/src/Services/Event/Event.Api/appsettings.json
+++ b/src/Services/Event/Event.Api/appsettings.json
@@ -13,7 +13,7 @@
     "file": {
       "enabled": true,
       "path": "logs/logs.txt",
-      "interval": "day"
+      "interval": "hour"
     },
     "seq": {
       "enabled": false,
