--- a/src/Shared/Shared.MessageBroker/Shared.MessageBroker.csproj
+++ b/src/Shared/Shared.MessageBroker/Shared.MessageBroker.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Shared.Cqrs\Shared.Cqrs.csproj"/>
+    </ItemGroup>
+
 </Project>
