--- a/src/Services/Event/Event.Api/appsettings.json
+++ b/src/Services/Event/Event.Api/appsettings.json
@@ -26,5 +26,18 @@
     "database": "event-service",
     "seed": false
   },
+  "prometheus": {
+    "enabled": true,
+    "endpoint": "/metrics"
+  },
+  "metrics": {
+    "enabled": true,
+    "influxEnabled": false,
+    "prometheusEnabled": true,
+    "influxUrl": "http://localhost:8086",
+    "database": "test",
+    "env": "local",
+    "interval": 5
+  },
   "AllowedHosts": "*"
 }
