--- a/src/Services/Event/Event.Api/Event.Api.csproj
+++ b/src/Services/Event/Event.Api/Event.Api.csproj
@@ -5,17 +5,23 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
+        <UserSecretsId>0a06ef56-ed27-4eda-bcee-c0ccb1bfebc9</UserSecretsId>
+        <DockerfileContext>..\..\..\..</DockerfileContext>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
-      <ProjectReference Include="..\..\..\Shared\Shared.Swagger\Shared.Swagger.csproj" />
-      <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
-      <ProjectReference Include="..\Event.Application\Event.Application.csproj" />
+        <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj"/>
+        <ProjectReference Include="..\..\..\Shared\Shared.Metrics\Shared.Metrics.csproj"/>
+        <ProjectReference Include="..\..\..\Shared\Shared.Prometheus\Shared.Prometheus.csproj"/>
+        <ProjectReference Include="..\..\..\Shared\Shared.Swagger\Shared.Swagger.csproj"/>
+        <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj"/>
+        <ProjectReference Include="..\Event.Application\Event.Application.csproj"/>
     </ItemGroup>
 
 </Project>
