--- a/src/Services/Event/Event.Api/appsettings.json
+++ b/src/Services/Event/Event.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "app": {
     "name": "Event.Api",
+    "service": "event-service",
     "version": "1.0.0"
   },
   "logger": {
@@ -37,7 +38,10 @@
     "influxUrl": "http://localhost:8086",
     "database": "test",
     "env": "local",
-    "interval": 5
+    "interval": 5,
+    "tags": {
+      "app": "event-service"
+    }
   },
   "AllowedHosts": "*"
 }
