--- a/src/Services/Event/Event.Api/Event.Api.csproj
+++ b/src/Services/Event/Event.Api/Event.Api.csproj
@@ -24,4 +24,8 @@
         <ProjectReference Include="..\Event.Application\Event.Application.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="logs"/>
+    </ItemGroup>
+
 </Project>
