--- a/src/Services/Event/Event.Api/appsettings.json
+++ b/src/Services/Event/Event.Api/appsettings.json
@@ -17,7 +17,7 @@
       "interval": "hour"
     },
     "seq": {
-      "enabled": false,
+      "enabled": true,
       "url": "http://localhost:5341",
       "token": "secret"
     }
