--- a/src/Services/WebApiGateway/appsettings.json
+++ b/src/Services/WebApiGateway/appsettings.json
@@ -20,7 +20,7 @@
       "interval": "hour"
     },
     "seq": {
-      "enabled": false,
+      "enabled": true,
       "url": "http://localhost:5341",
       "token": "secret"
     }
