--- a/src/Services/Slip/Slip.Api/appsettings.json
+++ b/src/Services/Slip/Slip.Api/appsettings.json
@@ -1,8 +1,41 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "app": {
+    "name": "Slip.Api",
+    "service": "slip-service",
+    "version": "1.0.0"
+  },
+  "logger": {
+    "applicationName": "slip-service",
+    "excludePaths": [ "/ping", "/metrics" ],
+    "level": "information",
+    "console": {
+      "enabled": true
+    },
+    "file": {
+      "enabled": true,
+      "path": "logs/logs.txt",
+      "interval": "hour"
+    },
+    "seq": {
+      "enabled": true,
+      "url": "http://localhost:5341",
+      "token": "secret"
+    }
+  },
+  "prometheus": {
+    "enabled": true,
+    "endpoint": "/metrics"
+  },
+  "metrics": {
+    "enabled": true,
+    "influxEnabled": false,
+    "prometheusEnabled": true,
+    "influxUrl": "http://localhost:8086",
+    "database": "test",
+    "env": "local",
+    "interval": 5,
+    "tags": {
+      "app": "event-service"
     }
   },
   "AllowedHosts": "*"
