--- a/src/Services/Event/Event.Grpc/appsettings.json
+++ b/src/Services/Event/Event.Grpc/appsettings.json
@@ -1,14 +1,47 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "app": {
+    "name": "Event.Grpc",
+    "service": "event-grpc-service",
+    "version": "1.0.0"
+  },
+  "logger": {
+    "applicationName": "event-grpc-service",
+    "excludePaths": [ "/ping", "/metrics" ],
+    "level": "information",
+    "console": {
+      "enabled": true
+    },
+    "file": {
+      "enabled": true,
+      "path": "logs/logs.txt",
+      "interval": "hour"
+    },
+    "seq": {
+      "enabled": true,
+      "url": "http://localhost:5341",
+      "token": "secret"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
+  "mongo": {
+    "connectionString": "mongodb://localhost:27017",
+    "database": "event-service",
+    "seed": false
+  },
+  "prometheus": {
+    "enabled": true,
+    "endpoint": "/metrics"
+  },
+  "metrics": {
+    "enabled": true,
+    "influxEnabled": false,
+    "prometheusEnabled": true,
+    "influxUrl": "http://localhost:8086",
+    "database": "test",
+    "env": "local",
+    "interval": 5,
+    "tags": {
+      "app": "event-grpc-service"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
