--- a/infra.yml
+++ b/infra.yml
@@ -33,6 +33,8 @@ services:
   
   sqlserver:
     image: "mcr.microsoft.com/mssql/server:2017-latest"
+    volumes:
+      - sqlserver-data:/var/opt/mssql/data
     environment:
       ACCEPT_EULA: "Y"
       SA_PASSWORD: "pa55w0rd!"
@@ -70,5 +72,6 @@ networks:
 
 
 volumes:
+  sqlserver-data:
   redis:
     driver: local
