--- a/src/Shared/Shared.Grpc/Shared.Grpc.csproj
+++ b/src/Shared/Shared.Grpc/Shared.Grpc.csproj
@@ -17,4 +17,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Shared.Types\Shared.Types.csproj" />
+    </ItemGroup>
+
 </Project>
