Added A custom type since grpc does not support decimal values

--- a/src/Services/Event/Event.Grpc/Event.Grpc.csproj
+++ b/src/Services/Event/Event.Grpc/Event.Grpc.csproj
@@ -8,8 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
-        <Protobuf Include="Protos\event.proto" GrpcServices="Server" />
+        <Protobuf Include="Protos\greet.proto" GrpcServices="Server" ProtoRoot="Protos\" />
+        <Protobuf Include="Protos\event.proto" GrpcServices="Server" ProtoRoot="Protos\" />
     </ItemGroup>
 
     <ItemGroup>
