--- a/src/Services/Slip/Slip.Api/Slip.Api.csproj
+++ b/src/Services/Slip/Slip.Api/Slip.Api.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Metrics\Shared.Metrics.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Prometheus\Shared.Prometheus.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Swagger\Shared.Swagger.csproj" />
