--- a/src/Services/Event/Event.Grpc/Properties/launchSettings.json
+++ b/src/Services/Event/Event.Grpc/Properties/launchSettings.json
@@ -1,13 +1,18 @@
-﻿{
+{
   "profiles": {
     "Event.Grpc": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:3000;https://localhost:3001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:3000;https://localhost:3001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
