--- a/src/Services/WebApiGateway/WebApiGateway.csproj
+++ b/src/Services/WebApiGateway/WebApiGateway.csproj
@@ -7,6 +7,7 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <UserSecretsId>d95f6e9c-b4b4-4e09-b5e9-91194a9380f2</UserSecretsId>
         <DockerfileContext>..\..\..</DockerfileContext>
+        <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
     </PropertyGroup>
 
     <ItemGroup>
