--- a/src/Services/Event/Event.Grpc/appsettings.json
+++ b/src/Services/Event/Event.Grpc/appsettings.json
@@ -23,7 +23,7 @@
     }
   },
   "mongo": {
-    "connectionString": "mongodb://localhost:27017",
+    "connectionString": "mongodb://root:rootpassword@localhost:27017",
     "database": "event-service",
     "seed": false
   },
