--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore .\odin.sln
+      run: dotnet restore .\Odin.sln
     - name: Build
-      run: dotnet build --no-restore .\odin.sln
+      run: dotnet build --no-restore .\Odin.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal .\odin.sln
+      run: dotnet test --no-build --verbosity normal .\Odin.sln
