--- a/src/Services/Event/Event.Grpc/Event.Grpc.csproj
+++ b/src/Services/Event/Event.Grpc/Event.Grpc.csproj
@@ -11,7 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Protobuf Include="Protos\event.proto" GrpcServices="Server" ProtoRoot="Protos\" />
+        <Protobuf Include="Protos\event.proto" GrpcServices="Server" />
     </ItemGroup>
 
     <ItemGroup>
