--- a/src/Services/Event/Event.Api/Properties/launchSettings.json
+++ b/src/Services/Event/Event.Api/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:2000",
+      "applicationUrl": "http://localhost:2000;https://localhost:2001",
       "dotnetRunMessages": true
     },
     "IIS Express": {
