Updated ports not to clash with grafana

--- a/src/Services/Slip/Slip.Api/appsettings.json
+++ b/src/Services/Slip/Slip.Api/appsettings.json
@@ -38,6 +38,8 @@
       "app": "event-service"
     }
   },
-  "EventGrpcUrl": "https://localhost:3001",
+  "urls": {
+    "EventGrpcUrl": "https://localhost:3001"
+  },
   "AllowedHosts": "*"
 }
