--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,8 @@ services:
     ports:
       - "30091:3000"
     volumes:
-      - ./grafana-data/data:/var/lib/grafana
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - grafana-data:/var/lib/grafana
 
   rabbitmq:
     image: "rabbitmq:3-management"
@@ -111,6 +112,7 @@ volumes:
   redis:
     driver: local
   mongodb_data_container:
+  grafana-data:
 
 networks:
   odin:
