Updated configuration for gRPC

--- a/src/Services/Slip/Slip.Api/appsettings.json
+++ b/src/Services/Slip/Slip.Api/appsettings.json
@@ -39,7 +39,7 @@
     }
   },
   "urls": {
-    "EventGrpcUrl": "https://localhost:3001"
+    "EventGrpcUrl": "http://localhost:4081"
   },
   "AllowedHosts": "*"
 }
