--- a/src/Services/Event/Event.Application/Event.Application.csproj
+++ b/src/Services/Event/Event.Application/Event.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\Shared\Shared.Cqrs\Shared.Cqrs.csproj" />
+      <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
       <ProjectReference Include="..\Event.Infrastructure\Event.Infrastructure.csproj" />
       <ProjectReference Include="..\Event.Core\Event.Core.csproj" />
