--- a/src/Services/Identity/Identity.Api/Identity.Api.csproj
+++ b/src/Services/Identity/Identity.Api/Identity.Api.csproj
@@ -19,6 +19,7 @@
       <ProjectReference Include="..\..\..\Shared\Shared.Prometheus\Shared.Prometheus.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Swagger\Shared.Swagger.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
+      <ProjectReference Include="..\Identity.Core\Identity.Core.csproj" />
     </ItemGroup>
 
 </Project>
