--- a/src/Services/Identity/Identity.Core/Identity.Core.csproj
+++ b/src/Services/Identity/Identity.Core/Identity.Core.csproj
@@ -7,12 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\Shared\Shared.Cqrs\Shared.Cqrs.csproj" />
+      <ProjectReference Include="..\..\..\Shared\Shared.DAL.Postgres\Shared.DAL.Postgres.csproj" />
+      <ProjectReference Include="..\..\..\Shared\Shared.Jwt\Shared.Jwt.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Security\Shared.Security.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
     </ItemGroup>
