--- a/src/Services/Identity/Identity.Api/Dockerfile.original
+++ b/src/Services/Identity/Identity.Api/Dockerfile.original
@@ -1,5 +1,3 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
@@ -8,6 +6,7 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
 COPY ["src/Services/Identity/Identity.Api/Identity.Api.csproj", "src/Services/Identity/Identity.Api/"]
+COPY ["src/Services/Identity/Identity.Api/certs/localhost.pfx", "src/Services/Identity/Identity.Api/certs/"]
 COPY ["src/Shared/Shared.IdGenerator/Shared.IdGenerator.csproj", "src/Shared/Shared.IdGenerator/"]
 COPY ["src/Shared/Shared.Logging/Shared.Logging.csproj", "src/Shared/Shared.Logging/"]
 COPY ["src/Shared/Shared.Web/Shared.Web.csproj", "src/Shared/Shared.Web/"]
