Updated to handle market template and update market limits

--- a/src/Services/Event/Event.Api/appsettings.json
+++ b/src/Services/Event/Event.Api/appsettings.json
@@ -43,5 +43,21 @@
       "app": "event-service"
     }
   },
+  "auth": {
+    "certificate": {
+      "location": "certs/localhost.pfx",
+      "password": "test",
+      "rawData": ""
+    },
+    "jwt": {
+      "issuer": "odin",
+      "audience": "odin",
+      "validIssuer": "odin",
+      "validAudience": "odin",
+      "validateAudience": true,
+      "validateIssuer": true,
+      "validateLifetime": true
+    }
+  },
   "AllowedHosts": "*"
 }
