--- a/src/Services/Event/Event.Api/Event.Api.csproj
+++ b/src/Services/Event/Event.Api/Event.Api.csproj
@@ -11,12 +11,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.1" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Shared\Shared.Jwt\Shared.Jwt.csproj" />
         <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
         <ProjectReference Include="..\..\..\Shared\Shared.Metrics\Shared.Metrics.csproj" />
         <ProjectReference Include="..\..\..\Shared\Shared.Prometheus\Shared.Prometheus.csproj" />
