--- a/src/Services/Event/Event.Grpc/Properties/launchSettings.json
+++ b/src/Services/Event/Event.Grpc/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:4000;https://localhost:4001"
+      "applicationUrl": "http://localhost:4000;"
     },
     "Docker": {
       "commandName": "Docker",
