--- a/src/Services/Slip/Slip.Infrastructure/Slip.Infrastructure.csproj
+++ b/src/Services/Slip/Slip.Infrastructure/Slip.Infrastructure.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\Shared\Shared.Redis\Shared.Redis.csproj" />
+      <ProjectReference Include="..\Slip.Core\Slip.Core.csproj" />
+    </ItemGroup>
+
 </Project>
