--- a/src/Services/Slip/Slip.Api/appsettings.json
+++ b/src/Services/Slip/Slip.Api/appsettings.json
@@ -35,7 +35,7 @@
     "env": "local",
     "interval": 5,
     "tags": {
-      "app": "event-service"
+      "app": "slip-service"
     }
   },
   "urls": {
