--- a/src/Services/Slip/Slip.Application/Slip.Application.csproj
+++ b/src/Services/Slip/Slip.Application/Slip.Application.csproj
@@ -11,6 +11,7 @@
       <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
       <ProjectReference Include="..\Slip.Core\Slip.Core.csproj" />
+      <ProjectReference Include="..\Slip.Infrastructure\Slip.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
