Implemented place bet and build slip

--- a/src/Services/Slip/Slip.Api/Slip.Api.csproj
+++ b/src/Services/Slip/Slip.Api/Slip.Api.csproj
@@ -37,7 +37,9 @@
     </ItemGroup>
     
     <ItemGroup>
-      <Folder Include="Controllers" />
+      <Content Update="certs\localhost.pfx">
+        <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
