--- a/src/Services/Slip/Slip.Api/Properties/launchSettings.json
+++ b/src/Services/Slip/Slip.Api/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Slip.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
