--- a/src/Services/Slip/Slip.Application/Slip.Application.csproj
+++ b/src/Services/Slip/Slip.Application/Slip.Application.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\Shared\Shared.Cqrs\Shared.Cqrs.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
+      <ProjectReference Include="..\..\..\Shared\Shared.RabbitMq\Shared.RabbitMq.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
       <ProjectReference Include="..\Slip.Core\Slip.Core.csproj" />
       <ProjectReference Include="..\Slip.Infrastructure\Slip.Infrastructure.csproj" />
