Added bet placement

--- a/src/Services/Event/Event.Infrastructure/Event.Infrastructure.csproj
+++ b/src/Services/Event/Event.Infrastructure/Event.Infrastructure.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\Event.Core\Event.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+    </ItemGroup>
+
 </Project>
