--- a/src/Services/Slip/Slip.Service/appsettings.json
+++ b/src/Services/Slip/Slip.Service/appsettings.json
@@ -22,6 +22,9 @@
       "token": "secret"
     }
   },
+  "postgres": {
+    "connectionString": "Host=localhost,5432;Database=odin-slip;Username=postgres;Password=postgres"
+  },
   "prometheus": {
     "enabled": true,
     "endpoint": "/metrics"
