--- a/src/Shared/Shared.DAL.Postgres/Shared.DAL.Postgres.csproj
+++ b/src/Shared/Shared.DAL.Postgres/Shared.DAL.Postgres.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
