--- a/src/Services/Event/Event.Application/Event.Application.csproj
+++ b/src/Services/Event/Event.Application/Event.Application.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
     </ItemGroup>
 
