--- a/src/Services/Event/Event.Core/Event.Core.csproj
+++ b/src/Services/Event/Event.Core/Event.Core.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\..\..\Shared\Shared.IdGenerator\Shared.IdGenerator.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+    </ItemGroup>
+
 </Project>
