--- a/src/Services/Event/Event.Grpc/Event.Grpc.csproj
+++ b/src/Services/Event/Event.Grpc/Event.Grpc.csproj
@@ -17,6 +17,7 @@
     <ItemGroup>
         <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
