--- a/src/Services/Slip/Slip.Core/Slip.Core.csproj
+++ b/src/Services/Slip/Slip.Core/Slip.Core.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\..\..\Shared\Shared.Domain\Shared.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+    </ItemGroup>
+
 </Project>
