--- a/src/Shared/Shared.Common/Shared.Common.csproj
+++ b/src/Shared/Shared.Common/Shared.Common.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
       <PackageReference Include="NodaTime" Version="3.0.10" />
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
