--- a/src/Shared/Shared.Cqrs/Shared.Cqrs.csproj
+++ b/src/Shared/Shared.Cqrs/Shared.Cqrs.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
       <PackageReference Include="Scrutor" Version="4.1.0" />
     </ItemGroup>
 
