--- a/src/Shared/Shared.IdGenerator/Shared.IdGenerator.csproj
+++ b/src/Shared/Shared.IdGenerator/Shared.IdGenerator.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Ardalis.GuardClauses" Version="4.0.0" />
       <PackageReference Include="IdGen" Version="3.0.0" />
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     </ItemGroup>
 
 </Project>
