--- a/src/Shared/Shared.Jwt/Shared.Jwt.csproj
+++ b/src/Shared/Shared.Jwt/Shared.Jwt.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="7.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="7.0.1" />
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
