--- a/src/Shared/Shared.MessageBroker.Cqrs/Shared.MessageBroker.Cqrs.csproj
+++ b/src/Shared/Shared.MessageBroker.Cqrs/Shared.MessageBroker.Cqrs.csproj
@@ -10,4 +10,8 @@
         <ProjectReference Include="..\Shared.MessageBroker\Shared.MessageBroker.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+    </ItemGroup>
+
 </Project>
