--- a/src/Shared/Shared.MessageBroker/Shared.MessageBroker.csproj
+++ b/src/Shared/Shared.MessageBroker/Shared.MessageBroker.csproj
@@ -10,4 +10,8 @@
         <ProjectReference Include="..\Shared.Cqrs\Shared.Cqrs.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+    </ItemGroup>
+
 </Project>
