--- a/src/Shared/Shared.Metrics/Shared.Metrics.csproj
+++ b/src/Shared/Shared.Metrics/Shared.Metrics.csproj
@@ -27,6 +27,7 @@
         <PackageReference Include="App.Metrics.Reporting.Console" Version="4.3.0" />
         <PackageReference Include="App.Metrics.Reporting.Http" Version="4.3.0" />
         <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="4.3.0" />
+        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
