--- a/src/Shared/Shared.Prometheus/Shared.Prometheus.csproj
+++ b/src/Shared/Shared.Prometheus/Shared.Prometheus.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
         <PackageReference Include="prometheus-net" Version="7.0.0" />
         <PackageReference Include="prometheus-net.AspNetCore" Version="7.0.0" />
         <PackageReference Include="prometheus-net.AspNetCore.Grpc" Version="7.0.0" />
