--- a/src/Shared/Shared.RabbitMq/Shared.RabbitMq.csproj
+++ b/src/Shared/Shared.RabbitMq/Shared.RabbitMq.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
         <PackageReference Include="Polly" Version="7.2.3" />
+        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
         <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
     </ItemGroup>
 
