--- a/src/Shared/Shared.Redis/Shared.Redis.csproj
+++ b/src/Shared/Shared.Redis/Shared.Redis.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
       <PackageReference Include="StackExchange.Redis" Version="2.6.86" />
     </ItemGroup>
 
