Dockerized Event Slip

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -60,9 +60,8 @@ services:
   slip.api:
     container_name: slip.api
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=docker
       - ASPNETCORE_URLS=http://+:80
-      - "EventGrpcUrl=http://event.grpc:81"
     ports:
       - "5000:80"
     networks:
@@ -70,3 +69,10 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+ 
+  slip.worker:
+    container_name: slip.worker
+    environment:
+      - DOTNET_ENVIRONMENT=docker
+    networks:
+      - odin
