--- a/src/Services/Event/Event.Api/Event.Api.csproj
+++ b/src/Services/Event/Event.Api/Event.Api.csproj
@@ -27,4 +27,8 @@
         <ProjectReference Include="..\Event.Application\Event.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="certs\**" CopyToPublishDirectory="Always" />
+    </ItemGroup>
+
 </Project>
