Updated compose for prometheus and slip dependency

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -72,6 +72,8 @@ services:
  
   slip.worker:
     container_name: slip.worker
+    depends_on:
+      - slip.api
     environment:
       - DOTNET_ENVIRONMENT=docker
     networks:
