--- a/src/Services/WebApiGateway/appsettings.json
+++ b/src/Services/WebApiGateway/appsettings.json
@@ -5,7 +5,7 @@
     "version": "1.0.0"
   },
   "logger": {
-    "applicationName": "event-service",
+    "applicationName": "api-gateway",
     "excludePaths": [
       "/ping",
       "/metrics"
