updated api gateway for event api

--- a/src/Services/WebApiGateway/appsettings.json
+++ b/src/Services/WebApiGateway/appsettings.json
@@ -4,6 +4,22 @@
     "service": "gateway-service",
     "version": "1.0.0"
   },
+  "auth": {
+    "certificate": {
+      "location": "certs/localhost.pfx",
+      "password": "test",
+      "rawData": ""
+    },
+    "jwt": {
+      "issuer": "odin",
+      "audience": "odin",
+      "validIssuer": "odin",
+      "validAudience": "odin",
+      "validateAudience": true,
+      "validateIssuer": true,
+      "validateLifetime": true
+    }
+  },
   "logger": {
     "applicationName": "api-gateway",
     "excludePaths": [
