--- a/src/Services/Event/Event.Api/Event.Api.csproj
+++ b/src/Services/Event/Event.Api/Event.Api.csproj
@@ -22,6 +22,7 @@
         <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
         <ProjectReference Include="..\..\..\Shared\Shared.Metrics\Shared.Metrics.csproj" />
         <ProjectReference Include="..\..\..\Shared\Shared.Prometheus\Shared.Prometheus.csproj" />
+        <ProjectReference Include="..\..\..\Shared\Shared.Security\Shared.Security.csproj" />
         <ProjectReference Include="..\..\..\Shared\Shared.Swagger\Shared.Swagger.csproj" />
         <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
         <ProjectReference Include="..\Event.Application\Event.Application.csproj" />
