--- a/src/Services/WebApiGateway/Properties/launchSettings.json
+++ b/src/Services/WebApiGateway/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "WebApiGateway": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
