--- a/src/Services/WebApiGateway/WebApiGateway.csproj
+++ b/src/Services/WebApiGateway/WebApiGateway.csproj
@@ -11,14 +11,25 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Primitives" Version="7.0.0" />
+        <PackageReference Include="Yarp.ReverseProxy" Version="2.0.0" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
         <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
-        <PackageReference Include="Yarp.ReverseProxy" Version="1.1.1" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\Shared\Shared.Jwt\Shared.Jwt.csproj" />
         <ProjectReference Include="..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
+        <ProjectReference Include="..\..\Shared\Shared.Security\Shared.Security.csproj" />
         <ProjectReference Include="..\..\Shared\Shared.Web\Shared.Web.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="cert\localhost.pfx">
+        <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
